--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,10 @@ body {
   background-color: #000;
   color: #fff;
 }
+
+code, .jetbrains {
+  font-family: "JetBrains Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
